# project_odin

./: CMakeLists.txt  README.md
shaders/: triangle_frag.glsl  triangle_vert.glsl  triangle_vert.spv
src/: logger.h  main.cpp  simple_logger.cpp
src/vulkan_base/: vulkan_base.h  vulkan_device.cpp  vulkan_pipeline.cpp  vulkan_renderpass.cpp  vulkan_swapchain.cpp
